--- a/pub/index.html
+++ b/pub/index.html
@@ -4,9 +4,8 @@
 	<link rel="stylesheet" href="style.css" type="text/css" media="screen" />	
   </head>
   <body>
-	<h1>
-	  Welcome!
-	</h1>
-	<p>Hello from Rust.</p>
+    <div>
+      <h1>Hello from Rust!</h1>
+    </div>
   </body>
 </html>
